@@ -41,7 +41,7 @@ public:
 	/** Uses a custom avahi poll. Note that select() does not work with
 	 * a custom poll. */
 	zeroconf_avahi(const AvahiPoll* poll);
-	~zeroconf_avahi();
+	virtual ~zeroconf_avahi();
 
 	virtual void publish(const std::string& name, unsigned int port);
 	virtual void unpublish(const std::string& name);
